Fixed PMD issues